--- a/Plotly Introduction.ipynb
+++ b/Plotly Introduction.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "- See original post at http://3leafnodes.com/plotly-getting-started.\n",
-    "- Note the Plotly plots are not showing up on github but they can be found in the original post linked above. \n",
+    "- Note the interactive Plotly plots are not showing up on github but they can be found in the original post linked above. \n",
     "- Screenshots have been added in their place."
    ]
   },
@@ -884,7 +884,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![matplotlib-to-plotly](images/matplotlib-to-plotly.png)"
+    "![matplotlib-to-plotly](http://3leafnodes.com/assets/images/plotly/notebook/matplotlib-to-plotly.png)"
    ]
   },
   {
@@ -1008,7 +1008,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![linear-regression](images/linear-regression.png)"
+    "![linear-regression](http://3leafnodes.com/assets/images/plotly/notebook/linear-regression.png)"
    ]
   },
   {
@@ -1159,7 +1159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![3d-plane](images/3d-plane.png)"
+    "![3d-plane](http://3leafnodes.com/assets/images/plotly/notebook/3d-plane.png)"
    ]
   }
  ],
