--- a/projects/Forecasting Stock Prices and Generating Buy Sell Signals with the Python Data Science Ecosystem.ipynb
+++ b/projects/Forecasting Stock Prices and Generating Buy Sell Signals with the Python Data Science Ecosystem.ipynb
@@ -25,7 +25,7 @@
     "### Pandas, NumPy and Matplotlib\n",
     "Pandas is for used for viewing, plotting, manipulating and preparing the data. Pandas is built on NumPy which is great at efficient matrix calculations. Matplotlib is a well-established visualisation tool which includes functions for scatter matricies, box-plots, histograms, line charts, scatter plots and even candlestick charts, the technical analyst favorite. Pandas interacts well with Matplotlib and comes with convenience functions for plotting data (see: https://pandas.pydata.org/pandas-docs/stable/visualization.html). \n",
     "\n",
-    "### Sci-Kit Learn\n",
+    "### SciKit-Learn\n",
     "Scikit-Learn has a selection of well-curated implementations of machine learning algorithms. It also includes many tools necessary in the modelling pipeline like those for feature engineering, feature scaling, dimensionality reduction, feature expansion, learning curves, regularisation, transformations, cross-validation, grid search and model persistence.\n",
     "\n",
     "### Anaconda and  Git\n",
@@ -81,7 +81,7 @@
     "\n",
     "Addiionally, since Pandas is built on NumPy arrays, it provides fast computations across vectors and matricies without having to use loops. \n",
     "\n",
-    "Initially a 3D pandas Panel object was used in place of the separate DataFrames, but this object will soon be deprecated so a dictionary was used in its place. Note that **xarrays** are another option."
+    "Initially a 3D pandas **Panel** object was used in place of the separate DataFrames, but this object will soon be deprecated so a dictionary was used in its place. Note that **xarrays** are another option."
    ]
   },
   {
@@ -161,26 +161,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data is explored to look for correlations and check if any preprocessing needs to be done. \n",
+    "The data is explored to look for **correlations** and check if any preprocessing needs to be done. \n",
     "\n",
-    "The data for the 5 different tickers was read in from comma separated, value (CSV) files. Each table is stored in a different pandas DataFrame with a similar structure of 7 columns (Date, Open, High, Low, Close, Adj Close and Volume) and an index identifying the rows starting from 0. **Only SPY initially is shown for brevity because it is representative of the market as a whole.** Each row contains information for the stock corresponding to that particular day. For example on the 29/01/1993, the price of the SPY ETF was 43.9687 when the market opened. The highest price for the day was the same as the Open price, the lowest price was 43.7500, the price when the market closed was 27.744249 and the the total volume of stock traded was 1003200. The adjusted close price of 43.9375 takes into account dividends and splits or consolidations. The dates for each DataFrame do not align from the start since the tickers did not start trading on the same days. The end dates do align as 03/07/2017. \n",
+    "## Structure of the Data\n",
+    "The data for the 5 different tickers was read in from comma separated, value (CSV) files. Each table is stored in a different Pandas DataFrame with a similar structure of 7 columns (Date, Open, High, Low, Close, Adj Close and Volume) and an index identifying the rows starting from 0. **Only SPY initially is shown for brevity because it is representative of the market as a whole.** \n",
     "\n",
-    "**Is this the buying or the selling price in OHLC?**\n",
-    "\n",
-    "Items which are addressed include:\n",
-    "\n",
-    "- **Handling The Date**<br/>\n",
-    "The DataFrame indexes for each stock need to be converted from the object (string) type for manipulation, plotting, and training of the data. Weekends and holidays are missing so plotting the time series with an index of objects as it was acquired would be misleading. Initially the dates are converted to a DateTimeIndex. This makes calculating time deltas between dates and selecting rows by the index convenient. In pandas rows can be sliced using the dates (year or month only) in more flexible ways than can be done with strings.  Later on, the number of days as an integer from the start of trading is used to train the models. This is done because DateTimeIndexes cannot be consumed by ML models.\n",
+    "Each row contains information for the stock corresponding to that particular day. For example on the 29/01/1993, the price of the SPY ETF was 43.9687 when the market opened. The highest price for the day was the same as the Open price, the lowest price was 43.7500, the price when the market closed was 27.744249 and the the total volume of stock traded was 1003200. The adjusted close price of 43.9375 takes into account **dividends and splits or consolidations**. The dates for each DataFrame do not align from the start since the tickers did not start trading on the same days. The end dates do align as 03/07/2017. \n",
     "\n",
     "\n",
-    "- **Missing Values**<br/>\n",
-    "There are 2 scenarios where missing values occur. These are in the original tables and from joins between the original tables. In scenario one particular columns may not have data available for a particular entry. In this case one of the rows for AAPL contained 'null' strings as well as 0 entries. Most of the data was imported with usable data, however. In scenario two, when data for the different stocks are joined missing values are introduced since the start dates for trading are all different. Missing values means that estimators cannot be trained. There are several ways to deal with this including backfilling the data, removing those rows entirely, or removing those columns entirely. In this case backfilling would take the first recorded values and fill all the prior rows with the same data. Doing this significantly affects the performance of the less flexible models like linear regression, so I opted to remove those rows instead with the pandas function dropna().\n",
+    "## Handling The Date\n",
+    "The DataFrame indexes for each stock need to be converted from the object (string) type for manipulation, plotting, and training of the data. Weekends and holidays are missing so plotting the time series with an index of objects as it was acquired would be misleading. \n",
+    "\n",
+    "Initially the dates are converted to a **DateTimeIndex**. This makes calculating time deltas between dates and selecting rows by the index convenient. In Pandas, rows can be sliced using the dates (year or month only) in more flexible ways than can be done with strings.  Later on, the number of days as an integer from the start of trading is used to train the models. This is done because DateTimeIndexes cannot be consumed by ML models.\n",
     "\n",
     "\n",
-    "- **Additional Features and Scaling**\n",
+    "## Missing Values\n",
+    "There are 2 scenarios where missing values occur. These are in the original tables and from joins between the original tables. In scenario one, particular columns may not have data available for a particular entry. In this case one of the rows for AAPL contained 'null' strings as well as 0 entries. Most of the data was imported with usable data, however. \n",
     "\n",
+    "In scenario two, when data for the different stocks are joined missing values are introduced since the start dates for trading are all different. Missing values means that estimators cannot be trained. There are several ways to deal with this including **backfilling** the data, removing those rows entirely, or removing those columns entirely. \n",
     "\n",
-    "- **Creation of Buy/Sell signals**"
+    "In this case backfilling would take the first recorded values and fill all the prior rows with the same data. Doing this significantly affects the performance of the less flexible models like linear regression, so I opted to remove those rows instead with the Pandas function **dropna()**."
    ]
   },
   {
@@ -194,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pandas has some nice convenience functions for exploring and summarising the data. __df.head()__ and __df.tail()__ show the first 5 and last 5 rows of the DataFrame respectively. Adding an argument to the function will show that number of rows rather than the default 5. For example __df.head(10)__ would show the first 10 rows of the DataFrame. __df.describe()__ gives summarised statistics for each column. __df.info()__ also gives the data types. __df.index__ gives information about the index. It is of the type object which needs to be converted for use."
+    "Pandas has some convenience functions for exploring and summarising the data. __df.head()__ and __df.tail()__ show the first 5 and last 5 rows of the DataFrame respectively. Adding an argument to the function will show that number of rows rather than the default 5. For example __df.head(10)__ would show the first 10 rows of the DataFrame. __df.describe()__ gives summarised statistics for each column. __df.info()__ also gives the data types. __df.index__ gives information about the index. It is of the type object which needs to be converted for use."
    ]
   },
   {
@@ -1062,7 +1062,12 @@
    "source": [
     "## Feature Engineering\n",
     "\n",
-    "This section was a bit of an experiment. Many of these were discarded because they turned out to be highly correlated and hence of no value added. They were left in for demonstration and recording purposes. The combinations were changed until enough variety was achieved. Only one of the stocks was used here for simplicity, but the others can be substitued just as easily. Some of these features are domain specific (cumulative and daily returns) while others involve interactions where features are multiplied by eachother in different combinations to produce new features. The generated features are appended to the original DataFrame rather than creating new DataFrames to conserve memory."
+    "This section was a bit of an experiment. **Many of these were discarded because they turned out to be highly correlated and hence of no value added. They were left in for demonstration and recording purposes.** The combinations were changed until enough variety was achieved. Only one of the stocks was used here for simplicity, but the others can be substitued just as easily. \n",
+    "\n",
+    "Some of these features are domain specific (cumulative and daily returns) while others involve interactions where features are multiplied by eachother in different combinations to produce new features. The generated features are appended to the original DataFrame rather than creating new DataFrames to conserve memory.\n",
+    "\n",
+    "### Data Leakage\n",
+    "Update: Many of these features suffer from data leakage since they contain the target value as a component. In practice this will lead to over optimistic results and hence should not be used to train models."
    ]
   },
   {
@@ -21135,26 +21140,26 @@
     "collapsed": true
    },
    "source": [
-    "Finance\n",
+    "### Finance\n",
     "- Annual Reports for GOOGL EDGAR etc \n",
     "- Investopedia\n",
     "- Yahoo and Google Finance\n",
     "- Quandl.com\n",
     "- CFA and CSC curricula\n",
     "\n",
-    "Python Ecosystem\n",
+    "### Python Ecosystem\n",
     "- University Of Michigan Coursera Courses on Data Analysis in Python\n",
     "- ML Coursera Course\n",
     "- Scikit-learn, Pandas, Numpy, Python documentation\n",
     "- DataSchool\n",
     "- Advanced scikit-learn (YouTube)\n",
     "\n",
-    "Books\n",
+    "### Books\n",
     "- An Introduction to Statistical Learning with Applications in R. Hastie, Tibshirani etc.\n",
     "- Forecasting. Principles and Practice\n",
     "- Hands-on Machine Learning with Scikit-learn and Tensorflow. Geron.\n",
     "\n",
-    "Research Papers\n",
+    "### Research Papers\n",
     "- Convolutional Neural Nets and ImageNet Competition"
    ]
   }
